--- a/ejemplo_clase/docker-compose.yml
+++ b/ejemplo_clase/docker-compose.yml
@@ -12,31 +12,28 @@ services:
       # Aquí se enlaza el contenido de dentro del contenedor con el directorio en nuestra PC
       # de esa manera lo que guardemos en la base de datos va a quedar accesible en nuestra carpeta.
       - ./database:/var/lib/postgresql/data
-
     environment:
       # Postgres nos exige que establezcamos un usuario por defecto, esto se hace por medio
       # de variables de entorno. Según el hub de Postgres:
       POSTGRES_DB: marvel_db
       POSTGRES_USER: inove_user
       POSTGRES_PASSWORD: 123Marvel!
-
     ports:
       # Enlazamos el puerto en el que trabaja Postgres, por defecto el 5432
       - 5432:5432
 
-  adminer:
-    # Una interfaz para monitoreo y gestión de nuestra base de datos.
-    # Se puede acceder a ella en localhost:8080
-    container_name: marvel_adminer
-    image: adminer:4.8.0
-    restart: always
-    ports:
+  # adminer:
+  #   # Una interfaz para monitoreo y gestión de nuestra base de datos.
+  #   # Se puede acceder a ella en localhost:8080
+  #   container_name: marvel_adminer
+  #   image: adminer:4.8.0
+  #   restart: always
+  #   ports:
+  #     - 8080:8080
+  #   # depends_on indica que este servicio depende de que primero inicie "db"
+  #   depends_on: ["db"]
 
-      - 8080:8080
-    # depends_on indica que este servicio depende de que primero inicie "db"
-    depends_on: ["db"]
-
-  modulo_7:
+  modulo_9:
     # build es el lugar desde donde toma los archivos para generar la imagen.
     build: .
     # Imágen a utilizar:
@@ -54,8 +51,42 @@ services:
     # Puertos enlazados:
     ports:
         - "8000:8000"
+        # - "8080:8080"
+
     # Control de consola:
     stdin_open: true
     tty: true
-    
     command: python marvel/manage.py runserver 0.0.0.0:8000
+    depends_on:
+      - db
+
+# +++++++++++++++++++ Configuración para tareas asincrónicas +++++++++++++++++++ #
+
+  # Base de datos tipo Key-Value redis:     
+  redis:
+    image: "redis:alpine"
+    container_name: redis
+    depends_on:
+      - db
+
+  celery:
+    build: .
+    command: bash -c "cd marvel && celery --app marvel worker -l info"
+    container_name: celery
+    volumes:
+      - type: bind
+        source: .
+        target: /opt/back_end
+    depends_on:
+      - redis
+
+  celery-beat:
+    build: .
+    container_name: celery_beat
+    command: bash -c "cd marvel && celery --app marvel beat -l info"
+    volumes:
+      - type: bind
+        source: .
+        target: /opt/back_end
+    depends_on:
+      - redis
