--- a/ejemplo_clase/dockerfile
+++ b/ejemplo_clase/dockerfile
@@ -1,7 +1,8 @@
 FROM python:3.9.5
 ENV PYTHONUNBUFFERED=1
+RUN python -m pip install --upgrade pip
 COPY requirements.txt .
 RUN pip install -r requirements.txt
-WORKDIR /opt/back_end
+WORKDIR /opt/back_end/marvel
 COPY . /opt/back_end
-CMD python marvel/manage.py runserver 0.0.0.0:8000
+CMD python manage.py runserver 0.0.0.0:8000
