--- a/ejemplo_clase/docker-compose.yml
+++ b/ejemplo_clase/docker-compose.yml
@@ -2,7 +2,6 @@ version: "3.3"
 # Este es un archivo de docker-compose.yml para configurar el uso de contenedores de software.
 
 services:
-
   db:
     # Este servicio crea una base de datos de tipo Postgres.
     image: postgres:13.2
@@ -18,17 +17,33 @@ services:
       POSTGRES_DB: marvel_db
       POSTGRES_USER: inove_user
       POSTGRES_PASSWORD: 123Marvel!
+
     ports:
       # Enlazamos el puerto en el que trabaja Postgres, por defecto el 5432
       - 5432:5432
 
-  modulo_9:
+  adminer:
+    # Una interfaz para monitoreo y gestión de nuestra base de datos.
+    # Se puede acceder a ella en localhost:8080
+    container_name: marvel_adminer
+    image: adminer:4.8.0
+    restart: always
+    ports:
+      - 8080:8080
+    # depends_on indica que este servicio depende de que primero inicie "db"
+    depends_on: ["db"]
+
+  modulo_7:
     # build es el lugar desde donde toma los archivos para generar la imagen.
-    build: .
+    # Toma como contexto de trabajo el directorio donde está el docker-compose.yml (.)
+    # y busca el archivo "dockerfile".
+    build:
+      context: .
+      dockerfile: dockerfile
     # Imágen a utilizar:
-    image: modulo_9
+    image: modulo_7
     # Nombre del container:
-    container_name: modulo_9
+    container_name: modulo_7
     # Comportamiento ante fallos y al iniciar el sistema:
     restart: always
     # Carpetas enlazadas:
@@ -51,7 +66,6 @@ services:
     command: bash -c "[-d marvel/logs] || mkdir marvel/logs ; python manage.py runserver 0.0.0.0:8000"
     depends_on:
       - db
-
 # +++++++++++++++++++ Configuración para tareas asincrónicas +++++++++++++++++++ #
 
   # Base de datos tipo Key-Value redis:     
@@ -72,6 +86,8 @@ services:
         target: /opt/back_end
     depends_on:
       - redis
+      - db
+      - modulo_7
 
   # Celery-beat para organizar las tareas periódicas que definamos en nuestro código.
   celery-beat:
@@ -84,3 +100,24 @@ services:
         target: /opt/back_end
     depends_on:
       - redis
+      - db
+      - modulo_7
+
+  # flower para monitorear las celery task que definamos en nuestro código.
+  celery-flower:
+    container_name: celery_flower
+    build: .
+    image: local-saccess-django
+    command: bash -c "celery --app marvel flower"
+    volumes:
+      - type: bind
+        source: .
+        target: /opt/back_end
+    ports:
+      - 5555:5555
+    depends_on:
+      - redis
+      - db
+      - modulo_7
+      - celery
+      - celery-beat
